--- a/README
+++ b/README
@@ -1,10 +1,12 @@
-lantz_drivers
+lantz-drivers
 =============
 
 Lantz is an automation and instrumentation toolkit with a clean, well-designed
 and consistent interface.  It provides a core of commonly used functionalities
 for building applications that communicate with scientific instruments allowing
 rapid application prototyping, development and testing.
+
+This contains the lantz.drivers subpackage.
 
 For a longer description and docs, please visit the root of the project:
 
