--- a/CHANGES
+++ b/CHANGES
@@ -5,7 +5,7 @@ Lantz-drivers Changelog
 0.5.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Imported drivers from vascotenner drivers_developv branch.
 
 
 0.5 (2018-12-31)
